--- a/app/src/main/webapp/index.xhtml
+++ b/app/src/main/webapp/index.xhtml
@@ -1,5 +1,6 @@
 <html xmlns="http://www.w3c.org/1999/xhtml"
     xmlns:h="http://xmlns.jcp.org/jsf/html"
+    xmlns:f="http://xmlns.jcp.org/jsf/core"
     xmlns:p="http://primefaces.org/ui">
 <h:head>
     <title>Curso de Deploy</title>
@@ -43,8 +44,9 @@ body {
 </style>
 </h:head>
 <h:body>
+    <f:loadBundle basename="app" var="properties" />
     <div id="content">
-        <h2 id="titulo">#{helloWorld.greetings()}</h2>
+        <h2 id="titulo">#{helloWorld.greetings()} #{properties.ambiente}</h2>
         <h:form id="formulario">
             <h:panelGrid columns="4" cellpadding="5">
                 <h:outputLabel styleClass="bold" for="nome"
